--- a/src/components/code/code-other/pages/elem-pug.html
+++ b/src/components/code/code-other/pages/elem-pug.html
@@ -1,21 +1,13 @@
 <h1>Pug</h1>
 
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
-
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#articles">Статьи</a></p>
-  </div>
-
-</div>
+  <p><a href="#links">links</a></p>
+  <p><a href="#articles">Статьи</a></p>
+</article>
 
 
 <!-- links-->
