--- a/src/components/front/front-edu/pages/rs-test/rs-test-git.html
+++ b/src/components/front/front-edu/pages/rs-test/rs-test-git.html
@@ -3,7 +3,7 @@
 
   <h1>Git test</h1>
 
-  <strong>33 вопроса. Выполнил 94 балл из 100. Это правлиьных 31 ответов</strong>
+  <strong>33 вопроса. Выполнил 100 балл из 100. Это правлиьных 31 ответов</strong>
 </article>
 
 
@@ -176,12 +176,12 @@
 
 
 <article class="article">
-  <h3 style="color:brown;">14. What does git rebase -i allow?</h3>
-  <h3>Что позволяет git rebase -i</h3>
-  --------------
+  <h3>14. What does git rebase -i allow?</h3>
+  <h3>Что позволяет делать git rebase -i</h3>
+
   <ul>
     <li>Allows you to rewrite the history of the branch specified in the argument, starting from the commit where the current branch's branching occurred, as the -i key means inversed</li>
-    <li><strong>Allows selective merging of the history of the current and specified branches</strong></li>
+    <li>Allows selective merging of the history of the current and specified branches</li>
     <li><strong>Allows during a normal rebase to choose the commits that will remain in the branch after the command is executed</strong></li>
     <li><strong>Allows during a normal rebase to edit changes in one or more commits</strong></li>
   </ul>
@@ -219,7 +219,7 @@
   <h3>Что делает команда git Cherry-Pick</h3>
 
   <ul>
-    <li><strong>The git cherry-pick command is used to copy a specific commit from one branch to another, applying the changes introduced in that commit</strong></li>
+    <li><strong>The git cherry-pick command is used to copy a specific commit from one branch to another, applying the changes introduced in that commit. Создает новый коммит в текущей ветке, содержащий изменения из указанного коммита</strong></li>
     <li>The git cherry-pick command is a secret code for initiating the self-destruct sequence</li>
     <li>The git cherry-pick command combines the changes from several commits into one before applying it to the current branch</li>
     <li>The git cherry-pick command deletes a specific commit from the history</li>
@@ -281,6 +281,7 @@
 
 <article class="article">
   <h3>22. What is a Pull Request on GitHub?</h3>
+  <h3>Что такое Pull Request в GitHub?</h3>
 
   <ul>
     <li>A notification to project participants to download the updated branch version from the remote repository using the git pull command.</li>
@@ -409,7 +410,7 @@
 
 <article class="article">
   <h3>32. Which command displays the status of files in the working directory and the staging area?</h3>
-  <h3>Какая команда отображает состояние файлов в рабочем каталоге и промежуточной области</h3>
+  <h3>Какая команда показывает состояние файлов в рабочей директории и staging area, какие файлы изменены, но не добавлены в staging area, а какие уже ожидают коммита, находясь в staging area?</h3>
 
   <ul>
     <li>git log</li>
