--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -25,14 +25,14 @@ Article
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  column-gap: 20px;
+  gap: 20px;
   margin: 10px;
   padding: 10px;
   border-radius: 20px;
   background-color: tan;
 
   & div {
-    padding: 5px;
+    padding: 10px;
     border: 1px solid white;
     border-radius: 5px;
   }
@@ -54,6 +54,10 @@ Article
 
   & a:hover {
     text-decoration: underline;
+  }
+
+  & ol {
+    padding-left: 20px;
   }
 }
 
