--- a/src/components/code/code-js/js-corejs/pages/elem-date.html
+++ b/src/components/code/code-js/js-corejs/pages/elem-date.html
@@ -8,6 +8,7 @@
     <p><a href="#links">links</a></p>
     <p><a href="#create">Создание даты</a></p>
     <p><a href="#methods">Методы объекта Date</a></p>
+    <p><a href="#task1">Задача. Вернуть возраст по дате рождения</a></p>
 </article>
 
 
@@ -126,7 +127,8 @@
 <!-- getDate -->
 <article class="article">
   <div class="anchor" id="getDate"></div>
-  <h2>1. getDate()</h2>
+  <h3>1. getDate()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -141,7 +143,8 @@
 <!-- getDay -->
 <article class="article">
   <div class="anchor" id="getDay"></div>
-  <h2>2. getDay()</h2>
+  <h3>2. getDay()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -156,7 +159,8 @@
 <!-- getFullYear -->
 <article class="article">
   <div class="anchor" id="getFullYear"></div>
-  <h2>3. getFullYear()</h2>
+  <h3>3. getFullYear()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -171,7 +175,8 @@
 <!-- getHours -->
 <article class="article">
   <div class="anchor" id="getHours"></div>
-  <h2>4. getHours()</h2>
+  <h3>4. getHours()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -186,7 +191,8 @@
 <!-- getMilliseconds -->
 <article class="article">
   <div class="anchor" id="getMilliseconds"></div>
-  <h2>5. getMilliseconds()</h2>
+  <h3>5. getMilliseconds()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -201,7 +207,8 @@
 <!-- getMinutes -->
 <article class="article">
   <div class="anchor" id="getMinutes"></div>
-  <h2>6. getMinutes()</h2>
+  <h3>6. getMinutes()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -216,7 +223,8 @@
 <!-- getMonth -->
 <article class="article">
   <div class="anchor" id="getMonth"></div>
-  <h2>7. getMonth()</h2>
+  <h3>7. getMonth()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -231,7 +239,8 @@
 <!-- getSeconds -->
 <article class="article">
   <div class="anchor" id="getSeconds"></div>
-  <h2>8. getSeconds()</h2>
+  <h3>8. getSeconds()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -246,7 +255,8 @@
 <!-- getTime -->
 <article class="article">
   <div class="anchor" id="getTime"></div>
-  <h2>9. getTime()</h2>
+  <h3>9. getTime()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -261,7 +271,8 @@
 <!-- getTimezoneOffset -->
 <article class="article">
   <div class="anchor" id="getTimezoneOffset"></div>
-  <h2>10. getTimezoneOffset()</h2>
+  <h3>10. getTimezoneOffset()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -276,7 +287,8 @@
 <!-- getUTCDate -->
 <article class="article">
   <div class="anchor" id="getUTCDate"></div>
-  <h2>11. getUTCDate()</h2>
+  <h3>11. getUTCDate()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -291,7 +303,8 @@
 <!-- getUTCDay -->
 <article class="article">
   <div class="anchor" id="getUTCDay"></div>
-  <h2>12. getUTCDay()</h2>
+  <h3>12. getUTCDay()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -306,7 +319,8 @@
 <!-- getUTCFullYear -->
 <article class="article">
   <div class="anchor" id="getUTCFullYear"></div>
-  <h2>13. getUTCFullYear()</h2>
+  <h3>13. getUTCFullYear()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -321,7 +335,8 @@
 <!-- getUTCHours -->
 <article class="article">
   <div class="anchor" id="getUTCHours"></div>
-  <h2>14. getUTCHours()</h2>
+  <h3>14. getUTCHours()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -336,7 +351,8 @@
 <!-- getUTCMilliseconds -->
 <article class="article">
   <div class="anchor" id="getUTCMilliseconds"></div>
-  <h2>15. getUTCMilliseconds()</h2>
+  <h3>15. getUTCMilliseconds()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -351,7 +367,8 @@
 <!-- getUTCMinutes -->
 <article class="article">
   <div class="anchor" id="getUTCMinutes"></div>
-  <h2>16. getUTCMinutes()</h2>
+  <h3>16. getUTCMinutes()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -366,7 +383,8 @@
 <!-- getUTCMonth -->
 <article class="article">
   <div class="anchor" id="getUTCMonth"></div>
-  <h2>17. getUTCMonth()</h2>
+  <h3>17. getUTCMonth()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -381,7 +399,8 @@
 <!-- getUTCSeconds -->
 <article class="article">
   <div class="anchor" id="getUTCSeconds"></div>
-  <h2>18. getUTCSeconds()</h2>
+  <h3>18. getUTCSeconds()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -396,7 +415,8 @@
 <!-- getYear -->
 <article class="article">
   <div class="anchor" id="getYear"></div>
-  <h2>getYear() метод удален из стандарта</h2>
+  <h3>getYear() метод удален из стандарта</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -411,7 +431,8 @@
 <!-- Date.now -->
 <article class="article">
   <div class="anchor" id="dateNow"></div>
-  <h2>19. Date.now()</h2>
+  <h3>19. Date.now()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><em>(Появился в <strong>es5</strong>)</em></p>
   <p><strong>Возвращает number</strong></p>
@@ -424,7 +445,8 @@
 <!-- Date.parse -->
 <article class="article">
   <div class="anchor" id="dateParse"></div>
-  <h2>20. Date.parse()</h2>
+  <h3>20. Date.parse()</h3>
+
   <p><strong>Принимает строку (string)</strong></p>
   <p><strong>Возвращает number</strong></p>
   <p>Анализирует строку даты (например, "21 мая 1992 года") и возвращает количество миллисекунд, прошедших с 1 января 1970 года 00:00:00 по UTC.</p>
@@ -436,7 +458,8 @@
 <!-- setDate -->
 <article class="article">
   <div class="anchor" id="setDate"></div>
-  <h2>21. setDate()</h2>
+  <h3>21. setDate()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее номер дня в месяце.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -453,7 +476,8 @@
 <!-- setFullYear -->
 <article class="article">
   <div class="anchor" id="setFullYear"></div>
-  <h2>22. setFullYear()</h2>
+  <h3>22. setFullYear()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее год.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -470,7 +494,8 @@
 <!-- setHours -->
 <article class="article">
   <div class="anchor" id="setHours"></div>
-  <h2>23. setHours()</h2>
+  <h3>23. setHours()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее час.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -487,7 +512,8 @@
 <!-- setMilliseconds -->
 <article class="article">
   <div class="anchor" id="setMilliseconds"></div>
-  <h2>24. setMilliseconds()</h2>
+  <h3>24. setMilliseconds()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее миллисекунды.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -504,7 +530,8 @@
 <!-- setMinutes -->
 <article class="article">
   <div class="anchor" id="setMinutes"></div>
-  <h2>25. setMinutes()</h2>
+  <h3>25. setMinutes()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее минуты.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -521,7 +548,8 @@
 <!-- setMonth -->
 <article class="article">
   <div class="anchor" id="setMonth"></div>
-  <h2>26. setMonth()</h2>
+  <h3>26. setMonth()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее месяц.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -538,7 +566,8 @@
 <!-- setSeconds -->
 <article class="article">
   <div class="anchor" id="setSeconds"></div>
-  <h2>27. setSeconds()</h2>
+  <h3>27. setSeconds()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее секунды.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -555,7 +584,8 @@
 <!-- setTime -->
 <article class="article">
   <div class="anchor" id="setTime"></div>
-  <h2>28. setTime()</h2>
+  <h3>28. setTime()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее количество миллисекунд, прошедших с 1 января 1970 00:00:00 по UTC.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -572,7 +602,8 @@
 <!-- setUTCDate -->
 <article class="article">
   <div class="anchor" id="setUTCDate"></div>
-  <h2>29. setUTCDate()</h2>
+  <h3>29. setUTCDate()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее номер дня месяца.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -589,7 +620,8 @@
 <!-- setUTCFullYear -->
 <article class="article">
   <div class="anchor" id="setUTCFullYear"></div>
-  <h2>30. setUTCFullYear()</h2>
+  <h3>30. setUTCFullYear()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее год.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -606,7 +638,8 @@
 <!-- setUTCHours -->
 <article class="article">
   <div class="anchor" id="setUTCHours"></div>
-  <h2>31. setUTCHours()</h2>
+  <h3>31. setUTCHours()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее час.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -623,7 +656,8 @@
 <!-- setUTCMilliseconds -->
 <article class="article">
   <div class="anchor" id="setUTCMilliseconds"></div>
-  <h2>32. setUTCMilliseconds()</h2>
+  <h3>32. setUTCMilliseconds()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее миллисекунды.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -640,7 +674,8 @@
 <!-- setUTCMinutes -->
 <article class="article">
   <div class="anchor" id="setUTCMinutes"></div>
-  <h2>33. setUTCMinutes()</h2>
+  <h3>33. setUTCMinutes()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее минуты.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -657,7 +692,8 @@
 <!-- setUTCMonth -->
 <article class="article">
   <div class="anchor" id="setUTCMonth"></div>
-  <h2>34. setUTCMonth()</h2>
+  <h3>34. setUTCMonth()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее месяц.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -674,7 +710,8 @@
 <!-- setUTCSeconds -->
 <article class="article">
   <div class="anchor" id="setUTCSeconds"></div>
-  <h2>35. setUTCSeconds()</h2>
+  <h3>35. setUTCSeconds()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее секунды.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -691,7 +728,8 @@
 <!-- setYear -->
 <article class="article">
   <div class="anchor" id="setYear"></div>
-  <h2>setYear()</h2>
+  <h3>setYear()</h3>
+
   <p><strong>Принимает целое число (number)</strong>, представляющее год.</p>
   <p><strong>Изменяет объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
   <p><strong>Возвращает number</strong></p>
@@ -708,7 +746,8 @@
 <!-- toDateString -->
 <article class="article">
   <div class="anchor" id="toDateString"></div>
-  <h2>36. toDateString()</h2>
+  <h3>36. toDateString()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает строку (string)</strong> в виде человеко-читаемой строки на американском английском.</p>
@@ -722,7 +761,8 @@
 <!-- toISOString -->
 <article class="article">
   <div class="anchor" id="toISOString"></div>
-  <h2>37. toISOString()</h2>
+  <h3>37. toISOString()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает строку (string)</strong> в формате ISO 8601. Часовой пояс всегда равен UTC, что обозначено суффиксом "Z".</p>
@@ -736,7 +776,8 @@
 <!-- toJSON -->
 <article class="article">
   <div class="anchor" id="toJSON"></div>
-  <h2>38. toJSON()</h2>
+  <h3>38. toJSON()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает строку (string)</strong></p>
@@ -751,7 +792,8 @@
 <!-- toLocaleDateString -->
 <article class="article">
   <div class="anchor" id="toLocaleDateString"></div>
-  <h2>39. toLocaleDateString()</h2>
+  <h3>39. toLocaleDateString()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает строку (string)</strong></p>
@@ -766,7 +808,8 @@
 <!-- toLocaleTimeString -->
 <article class="article">
   <div class="anchor" id="toLocaleTimeString"></div>
-  <h2>40. toLocaleTimeString()</h2>
+  <h3>40. toLocaleTimeString()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает строку (string)</strong></p>
@@ -781,7 +824,8 @@
 <!-- toLocaleString -->
 <article class="article">
   <div class="anchor" id="toLocaleString"></div>
-  <h2>41. toLocaleString()</h2>
+  <h3>41. toLocaleString()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает строку (string)</strong></p>
@@ -796,7 +840,8 @@
 <!-- toString -->
 <article class="article">
   <div class="anchor" id="toString"></div>
-  <h2>42. toString()</h2>
+  <h3>42. toString()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает строку (string)</strong></p>
@@ -811,7 +856,8 @@
 <!-- toTimeString -->
 <article class="article">
   <div class="anchor" id="toTimeString"></div>
-  <h2>43. toTimeString()</h2>
+  <h3>43. toTimeString()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает строку (string)</strong></p>
@@ -826,7 +872,8 @@
 <!-- toUTCString -->
 <article class="article">
   <div class="anchor" id="toUTCString"></div>
-  <h2>44. toUTCString()</h2>
+  <h3>44. toUTCString()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает строку (string)</strong></p>
@@ -841,7 +888,8 @@
 <!-- Date.UTC -->
 <article class="article">
   <div class="anchor" id="dateUTC"></div>
-  <h2>45. Date.UTC()</h2>
+  <h3>45. Date.UTC()</h3>
+
   <p><strong>Принимает параметры в виде целых чисел (number)</strong> Date.UTC(year[, month[, day[, hour[, minute[, second[, millisecond]]]]]])</p>
   <p><strong>Возвращает number</strong></p>
   <p><strong>Создает объект</strong> и возвращает количество миллисекунд от начала эпохи (1 января 1970 00:00:00 UTC) для полученного значения объекта</p>
@@ -853,7 +901,8 @@
 <!-- valueOf -->
 <article class="article">
   <div class="anchor" id="valueOf"></div>
-  <h2>46. valueOf()</h2>
+  <h3>46. valueOf()</h3>
+
   <p><strong>Не принимает параметры</strong></p>
   <p><strong>Не изменяет объект</strong></p>
   <p><strong>Возвращает number</strong></p>
@@ -863,3 +912,30 @@
   <code>date.valueOf();</code>
   <code>1704056400000</code>
 </article>
+
+
+<!-- Задача. Вернуть возраст по дате рождения -->
+<article class="article">
+  <div class="anchor" id="task1"></div>
+  <h3>Задача. Вернуть возраст по дате рождения</h3>
+
+  <details>
+    <summary>Решение</summary>
+<pre>let me = {
+  birthDate: { year: 1979, month: 1, day: 1},
+  getAge: function() {
+    let now = new Date();
+    let born = new Date(
+      this.birthDate.year,
+      this.birthDate.month + 1,
+      this.birthDate.day
+    );
+    let diffInMilliseconds = now.getTime() - born.getTime();
+    return Math.floor(diffInMilliseconds / 1000 / 60 / 60 / 24 / 365.25);
+  }
+}
+
+console.log(me.getAge());</pre>
+  </details>
+</article>
+
