--- a/src/components/front/front-edu/pages/elem-edu-quiz.html
+++ b/src/components/front/front-edu/pages/elem-edu-quiz.html
@@ -23,12 +23,15 @@
     <li><a href="rs-test/rs-test-git.html" class="js-rs-test">Git</a> (100 из 100)</li>
     <li><a href="rs-test/rs-test-fundinternet.html" class="js-rs-test">Fundamentals of the internet</a> (100 из 100)</li>
     <hr>
+    <li><a href="rs-test/rs-test-htmlbasics.html" class="js-rs-test">HTML Basics</a> (100 из 100)</li>
+    <li><a href="rs-test/rs-test-cssbasics.html" class="js-rs-test">CSS Basics</a> (100 из 100)</li>
+    <hr>
+    <li><a href="rs-test/rs-test-cssflex.html" class="js-rs-test">CSS Flex (S0)</a> (0 из 100)</li>
+    <hr>
     <li><a href="rs-test/rs-test-jsbasics.html" class="js-rs-test">JS Basics</a> (100 из 100)</li>
     <li><a href="rs-test/rs-test-jstypes.html" class="js-rs-test">JS Types</a> (100 из 100)</li>
     <li><a href="rs-test/rs-test-jsscope.html" class="js-rs-test">JS Scope & Functions</a> (100 из 100)</li>
     <li><a href="rs-test/rs-test-jsevolution.html" class="js-rs-test">JS Evolution</a> (93 из 100)</li>
-    <li><a href="rs-test/rs-test-htmlbasics.html" class="js-rs-test">HTML Basics</a> (100 из 100)</li>
-    <li><a href="rs-test/rs-test-cssbasics.html" class="js-rs-test">CSS Basics</a> (100 из 100)</li>
     <hr>
     <li><a href="rs-test/rs-test-cssflexbox.html" class="js-rs-test">CSS Positioning & Flexbox</a> (96 из 100)</li>
     <li><a href="rs-test/rs-test-cssgrid.html" class="js-rs-test">CSS Grid</a> (85 из 100)</li>
@@ -67,6 +70,9 @@
     <li><a href="rs-test/rs-test-testing.html" class="js-rs-test">[St2] Testing</a> (75 из 100)</li>
     <li><a href="rs-test/rs-test-error.html" class="js-rs-test">[St2] Error handling</a> (71 из 100)</li>
     <li><a href="rs-test/rs-test-dp.html" class="js-rs-test">[St2] Design Patterns</a> (0 из 100)</li>
+    <hr>
+    <li><a href="rs-test/rs-test-react1-components.html" class="js-rs-test">React. Test #1 React components</a> (0 из 100)</li>
+    <li><a href="rs-test/rs-test-react2-errboundary.html" class="js-rs-test">React. Test #2 React error boundary</a> (0 из 100)</li>
   </ol>
 </article>
 
