--- a/src/components/front/front-edu/pages/elem-edu-rss2022-stage0.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2022-stage0.html
@@ -1,5 +1,5 @@
 <h1>The Rolling Scopes School
-<br>Javascript Frontend 2022Q1 Stage 0
+<br>Javascript Frontend 2022 Stage 0
 <br>13 декабря 2021 - 22 февраля 2022</h1>
 
 <!-- Заголовок -->
