--- a/src/components/front/front-edu/pages/elem-edu-rss2022-stage1.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2022-stage1.html
@@ -1,5 +1,5 @@
 <h1>The Rolling Scopes School
-<br>Курс JS Frontend разработка Stage1
+<br>Javascript Frontend 2022 Stage 1
 <br>15 марта 2022 - 31 мая 2022</h1>
 
 <!-- Заголовок -->
