--- a/src/components/front/front-edu/pages/elem-edu-rss2023-stage0.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2023-stage0.html
@@ -1,5 +1,5 @@
 <h1>The Rolling Scopes School
-<br>Javascript Frontend 2023Q2 Stage 0
+<br>Javascript Frontend 2023 Stage 0
 <br>26 июня 2023 - 30 октября 2023</h1>
 
 <!-- Заголовок -->
