--- a/src/components/front/front-edu/pages/elem-edu-rss2023-stage1.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2023-stage1.html
@@ -1,5 +1,5 @@
 <h1>The Rolling Scopes School
-<br>Курс JS Frontend разработка Stage1
+<br>Javascript Frontend 2023 Stage 1
 <br>5 ноября 2023 - 12 февраля 2024</h1>
 
 <!-- Заголовок -->
