--- a/src/components/front/front-edu/pages/elem-edu-rss2024-stage2.html
+++ b/src/components/front/front-edu/pages/elem-edu-rss2024-stage2.html
@@ -1,5 +1,5 @@
 <h1>The Rolling Scopes School
-<br>Курс JS Frontend разработка Stage2
+<br>Javascript Frontend 2024 Stage 2
 <br>13 февраля 2024 - 18 июня 2024</h1>
 
 <!-- Заголовок -->
