--- a/src/components/code/code-css/pages/elem-css-prop.html
+++ b/src/components/code/code-css/pages/elem-css-prop.html
@@ -37,7 +37,7 @@
 
   <div>
     <a href="#border">Граница</a>
-    <ol>    
+    <ol>
       <li><a href="#css-border">border</a>
         <ol>
           <li>border-width</li>
@@ -80,7 +80,7 @@
           <li>border-bottom-right-radius</li>
           <li>border-bottom-left-radius</li>
         </ol>
-      </li>      
+      </li>
     </ol>
   </div>
 
@@ -139,7 +139,7 @@
       <li><a href="#css-font-variant-position">font-variant-position</a></li>
     </ol>
   </div>
-  
+
   <div>
     <p><a href="#property-transition">Переходы</a></p>
     <p><a href="#css-transition">transition</a></p>
@@ -291,14 +291,14 @@
   <p>Значение по-умолчанию</p>
   <code>box-sizing: content-box;</code>
 
-  <p>В модели <strong>content-box</strong> свойства <strong>width</strong> и <strong>height</strong> это ширина и высота <strong>контента</strong>. Таким образом элемент на странице может занимать больше места, чем указано в свойствах <strong>width</strong> и <strong>height</strong>.</p> 
+  <p>В модели <strong>content-box</strong> свойства <strong>width</strong> и <strong>height</strong> это ширина и высота <strong>контента</strong>. Таким образом элемент на странице может занимать больше места, чем указано в свойствах <strong>width</strong> и <strong>height</strong>.</p>
   <p>Ширина элемента = левая граница + левый внутренний отступ + контент + правый внутренний отступ + правая граница.</p>
   <p>Высота элемента = верхняя граница + верхний внутренний отступ + контент + нижний внутренний отступ + нижняя граница.</p>
 
   <p>Второе значение</p>
   <code>box-sizing: border-box;</code>
 
-  <p>В модели <strong>border-box</strong> свойства <strong>width</strong> и <strong>height</strong> это ширина и высота <strong>элемента</strong>. Таким образом элемент на странице занимает ровно столько места, сколько указано в свойствах <strong>width</strong> и <strong>height</strong>.</p> 
+  <p>В модели <strong>border-box</strong> свойства <strong>width</strong> и <strong>height</strong> это ширина и высота <strong>элемента</strong>. Таким образом элемент на странице занимает ровно столько места, сколько указано в свойствах <strong>width</strong> и <strong>height</strong>.</p>
 </article>
 
 
@@ -567,7 +567,7 @@
 
   <p>Все углы закруглены на 25px</p>
   <code>border-radius: 25px;</code>
-  
+
   <p>Разные радиусы углов по часовой стрелке, начиная с верхнего левого угла</p>
   <code>border-radius: 10px 15px 20px 25px;</code>
 
@@ -826,7 +826,7 @@
 <article class="article">
   <div class="anchor" id="css-text-decoration-line"></div>
   <h3>text-decoration-line</h3>
-  
+
   <p>Свойство <strong>text-decoration-line</strong> определяет положение линии и может принимать одно из 2 значений.</p>
   <ol>
     <li>underline</li>
@@ -1028,7 +1028,7 @@
 <article class="article">
   <div class="anchor" id="css-font-family"></div>
   <h3>font-family</h3>
-      
+
   <p>Задает семейство шрифта, которое будет использоваться для оформления текста содержимого</p>
   <code>font-family: 'Josefin Sans', sans-serif;</code>
 </article>
@@ -1311,6 +1311,20 @@
 <article class="article">
   <div class="anchor" id="css-position"></div>
   <h3>position</h3>
+
+  <p>Свойство <strong>position</strong> может принимать значения</p>
+  <ul>
+    <li><h4>static (по умолчанию)</h4></li>
+    <li><h4>relative</h4></li>
+    <li><h4>absolute</h4></li>
+    <li><h4>fixed</h4></li>
+    <li><h4>sticky</h4></li>
+    <li><h4>inherit</h4></li>
+    <li><h4>initial</h4></li>
+    <li><h4>revert</h4></li>
+    <li><h4>revert-layer</h4></li>
+    <li><h4>unset</h4></li>
+  </ul>
 </article>
 
 
@@ -1359,9 +1373,9 @@
     <li><a href="#css-flex-basis">flex-basis</a></li>
   </ol>
   <p>
-  <a href="#css-align-content">align-content</a>  
-  <a href="#css-flex">flex</a>  
-  <a href="#css-flex-flow">flex-flow</a>  
+  <a href="#css-align-content">align-content</a>
+  <a href="#css-flex">flex</a>
+  <a href="#css-flex-flow">flex-flow</a>
   <a href="#css-order">order</a>
   </p>
 
@@ -1402,33 +1416,56 @@
   <div class="anchor" id="css-justify-content"></div>
   <h3>justify-content</h3>
   <p>Выравнивает флекс-элементы по главной оси</p>
-  <p>Свойство justify-content может принимать одно из 5 значений</p>
+  <p>Свойство justify-content может принимать одно из 12 значений</p>
   <ol>
     <li>
-      <h4>justify-content: flex-start; (по-умолчанию)</h4>
+      <h4>flex-start</h4>
       <p>Выравнивает flex элементы от начала главной оси</p>
     </li>
     <li>
-      <h4>justify-content: flex-end;</h4>
+      <h4>flex-end</h4>
       <p>Выравнивает flex элементы от концу главной оси</p>
     </li>
     <li>
-      <h4>justify-content: center;</h4>
+      <h4>center</h4>
       <p>Выравнивает flex элементы по центру главной оси</p>
     </li>
     <li>
-      <h4>justify-content: space-between;</h4>
-      <p>Выравнивает flex элементы по всей ширине контейнера с равными отступами между элементами</p>      
+      <h4>start</h4>
+      <p>Выравнивает flex элементы от начала главной оси</p>
     </li>
     <li>
-      <h4>justify-content: space-around;</h4>
-      <p>Одинаковые отступы между элементами и в два раза меньше отступы от начала и конца контейнера</p>            
+      <h4>end</h4>
+      <p>Выравнивает flex элементы от концу главной оси</p>
+    </li>
+      <h4>left</h4>
+      <p>Выравнивает flex элементы по левому краю</p>
     </li>
     <li>
-      <h4>justify-content: space-evenly;</h4>
-      <p>Одинаковые отступы между элементами и от начала и конца контейнера</p>            
+      <h4>right</h4>
+      <p>Выравнивает flex элементы по правому краю</p>
     </li>
-  </ol>
+    <li>
+      <h4>normal (по умолчанию)</h4>
+      <p>Выравнивает flex элементы</p>
+    </li>
+    <li>
+      <h4>space-between</h4>
+      <p>Выравнивает flex элементы по всей ширине контейнера с равными отступами между элементами</p>
+    </li>
+    <li>
+      <h4>space-around</h4>
+      <p>Одинаковые отступы между элементами и в два раза меньше отступы от начала и конца контейнера</p>
+    </li>
+    <li>
+      <h4>space-evenly</h4>
+      <p>Одинаковые отступы между элементами и от начала и конца контейнера</p>
+    </li>
+    <li>
+      <h4>stretch</h4>
+      <p>Автоматически подгоняется под размер контейнера</p>
+    </li>
+ </ol>
 </article>
 
 <article class="article">
@@ -1525,12 +1562,46 @@
   <p>Элемент будет сжиматься в 3 раза быстрее, чем элементы с flex-shrink: 1; если уменьшается контейнер.</p>
 </article>
 
+
+<!-- align-self -->
 <article class="article">
   <div class="anchor" id="css-align-self"></div>
   <h3>align-self</h3>
   <p>Устанавливает выравнивание по высоте отдельно взятого флекс-элемента</p>
   <p>Переопределяет свойство align-items контейнера</p>
-  <code>align-self: flex-start;</code>
+  <p>Может принимать одно из следующих значений</p>
+  <ul>
+    <li>
+      <h4>auto (по умолчанию)</h4>
+    </li>
+    <li>
+      <h4>normal</h4>
+    </li>
+    <li>
+      <h4>center</h4>
+    </li>
+    <li>
+      <h4>start</h4>
+    </li>
+    <li>
+      <h4>end</h4>
+    </li>
+    <li>
+      <h4>self-start</h4>
+    </li>
+    <li>
+      <h4>self-end</h4>
+    </li>
+    <li>
+      <h4>flex-start</h4>
+    </li>
+    <li>
+      <h4>flex-end</h4>
+    </li>
+    <li>
+      <h4>anchor-center</h4>
+    </li>
+  </ul>
 </article>
 
 
@@ -1646,7 +1717,7 @@
   <h2>grid-template-columns</h2>
 
   <p>По-умолчанию у сетки только одна колонка. Свойство <strong>grid-template-columns</strong> определяет количество и размер колонок в сетке. Количество и размеры можно задать разными способами.</p>
-  
+
   <p>Создадим три колонки с фиксированными размерами</p>
   <code>grid-template-columns: 150px 300px 150px;</code>
 
@@ -1751,11 +1822,11 @@
   <h2>grid-row</h2>
 
   <p>По-умолчанию элементы занимают одну ячейку</p>
-  <p>Можно точно задать между какими линиями нужно расположить элемент.</p> 
+  <p>Можно точно задать между какими линиями нужно расположить элемент.</p>
 
   <p>Элемент займет два ряда между 1 и 3 линией</p>
   <code>grid-row: 1 / 3;</code>
-  
+
   <p>Элемент займет три ряда после 1 линии</p>
   <code>grid-row: 1 / span 3;</code>
 </article>
@@ -1767,11 +1838,11 @@
   <h2>grid-column</h2>
 
   <p>По-умолчанию элементы занимают одну ячейку</p>
-  <p>Можно точно задать между какими линиями нужно расположить элемент.</p> 
-  
+  <p>Можно точно задать между какими линиями нужно расположить элемент.</p>
+
   <p>Элемент займет 2 столбца между 2 и 4 линией</p>
   <code>grid-column: 2 / 4;</code>
-  
+
   <p>Элемент займет 2 столбца после 2 линии</p>
   <code>grid-column: 2 / span 2;</code>
 </article>
