--- a/src/components/code/algorithm/al-theory/pages/elem-complexity.html
+++ b/src/components/code/algorithm/al-theory/pages/elem-complexity.html
@@ -2,7 +2,7 @@
 
 
 <!-- Содержание -->
-<div class="article">
+<article class="article">
   <h2>Содержание</h2>
 
   <p><a href="#bigo">Сложность</a></p>
@@ -17,7 +17,7 @@
     <li><a href="#bigo-f">Факториальное время O(!)</a></li>
   </ol>
   <p><a href="#bigo-js">Сложность встроенных методов JavaScript</a></p>
-</div>
+</article>
 
 
 <!-- bigo -->
@@ -71,7 +71,7 @@
   <h3>2. Логарифмическое время O(log n)</h3>
   <p>Логарифмическое время - это вторая по эффективности временная сложность. Время выполнения алгоритма растет пропорционально логарифму размера входных даных.</p>
   <p>Время выполнения алгоритма растет медленно с увеличением размера входных данных.</p>
-  
+
   <h4>Пример 1. Бинарный поиск в отсортированном массиве</h4>
 <pre>function binarySearch(arr, target) {
   let left = 0;
@@ -86,7 +86,7 @@
         right = mid - 1; // искать в левой половине
     }
   }
-  return -1; 
+  return -1;
 }</pre>
   <p>Бинарный поиск ищет значение в отсортированном массиве, разделяя его пополам на каждой итерации. Поиск начинается с середины массива. Если значение, которое мы ищем, больше среднего элемента, поиск продолжается в правой половине массива. Если оно меньше, то в левой. Таким образом, на каждой итерации мы уменьшаем область поиска примерно в два раза, что обеспечивает логарифмическую сложность O(log n).</p>
 
@@ -142,7 +142,7 @@
     todoListBlock.appendChild(renderTodo(todos[i].comment));
   }
 }</pre>
-  
+
 </article>
 
 
@@ -185,7 +185,7 @@ console.log(sumOfPairs(myArray)); // Результат: 40</pre>
   }
 }</pre>
   <p>На вход приходит список тудушек и есть какая-то функция renderTodo. Она не описана. Будем считать что она работает за константную сложность.</p>
-  <p>Здесь полиномиальная сложность - O(N*M). Где N это количество элементов в массиве todos, а M количество узлов в DOM дереве. Потому что внутри цикла каждый раз делается поиск по классу, который работает за линейную сложность.</p> 
+  <p>Здесь полиномиальная сложность - O(N*M). Где N это количество элементов в массиве todos, а M количество узлов в DOM дереве. Потому что внутри цикла каждый раз делается поиск по классу, который работает за линейную сложность.</p>
 </article>
 
 
