--- a/src/components/code/algorithm/js-coderun/pages/elem-coderun-01.html
+++ b/src/components/code/algorithm/js-coderun/pages/elem-coderun-01.html
@@ -6,6 +6,7 @@
 
   <p><a href="https://coderun.yandex.ru/catalog">coderun.yandex.ru</a></p>
   <p><a href="https://ru.hexlet.io/blog/posts/grokaem-algoritmy-gayd-po-algoritmam-dlya-teh-komu-slozhno-reshat-zadachi">ru.hexlet.io Грокаем алгоритмы</a></p>
+  <p><a href="https://github.com/vitkarpov/coderun-solutions">github.com/vitkarpov/coderun-solutions</a></p>
 </div>
 
 <!-- Содержание -->
