--- a/src/components/code/code-pascal/pages/elem-pascal.html
+++ b/src/components/code/code-pascal/pages/elem-pascal.html
@@ -1,26 +1,29 @@
 <h1>Pascal</h1>
 
-<!-- Заголовок -->
-<div class="article">
-  <div class="anchor" id="content"></div>
-  <h2>Содержание</h2>
-</div>
 
 <!-- Содержание -->
-<div class="article article__content">
+<article class="article">
+  <h2>Содержание</h2>
 
-  <div>
-    <p><a href="#links">links</a></p>
-    <p><a href="#urok0">Урок 0</a></p>
-    <p><a href="#urok1">Урок 1</a></p>
-    <p><a href="#urok2">Урок 2</a></p>
-    <p><a href="#urok3">Урок 3</a></p>
-    <p><a href="#urok4">Урок 4</a></p>
-    <p><a href="#urok5">Урок 5</a></p>
-    <p><a href="#urok6">Урок 6</a></p>
-  </div>
+  <p><a href="#about">about</a></p>
+  <p><a href="#links">links</a></p>
+  <p><a href="#urok0">Урок 0</a></p>
+  <p><a href="#urok1">Урок 1</a></p>
+  <p><a href="#urok2">Урок 2</a></p>
+  <p><a href="#urok3">Урок 3</a></p>
+  <p><a href="#urok4">Урок 4</a></p>
+  <p><a href="#urok5">Урок 5</a></p>
+  <p><a href="#urok6">Урок 6</a></p>
+</article>
 
-</div>
+
+<!-- about -->
+<article class="article">
+  <div class="anchor" id="about"></div>
+  <h2>about</h2>
+
+  <p>В 1969 году Николас Вирт написал язык программирования Паскаль</p>
+</article>
 
 
 <!-- links -->
@@ -46,12 +49,12 @@
 
 <article class="article">
   <h2>Есть три среды разработки для Pascal</h2>
-  
+
   <p><a href="https://pascalabc.net/">pascalabc.net</a></p>
 
   <p>PascalABC.NET - язык программирования нового поколения, нацеленный на обучение современному программированию в 21 веке и использование в образовательной и научной сферах. Он создан в 2007 году, основан на языках C# и Delphi (Object Pascal), которые занимают соответственно 5 и 13 строчки в рейтинге популярности языков программирования TIOBE 2024, заимствует от языка Python компактность записи программ и ряд конструкций, сохраняя при этом все преимущества языка компиляционного типа (ранний контроль ошибок, высокая скорость выполнения программ).</p>
 
-  <p>PascalABC.NET включает бесплатную, простую и мощную среду разработки с подсказками по коду, автоформатированием и образцами кода для начинающих.</p>   
+  <p>PascalABC.NET включает бесплатную, простую и мощную среду разработки с подсказками по коду, автоформатированием и образцами кода для начинающих.</p>
 
   <p><a href="https://www.freepascal.org/">freepascal.org</a></p>
 
@@ -79,7 +82,7 @@
 
 <article class="article">
   <h2><a href="https://fkn.ktu10.com/?q=node/7301" class="text-link">https://fkn.ktu10.com/?q=node/7301</a></h2>
-  
+
   <p>Основная страница учебной программы. Паскаль - Онлайн Учебник для начинающих изучать программирование с нуля. Справочник. Примеры кода. [Pascal]</p>
 
   <p><span class="text-link">Прочитал</span> <a href="https://fkn.ktu10.com/?q=node/12456" class="text-link">https://fkn.ktu10.com/?q=node/12456</a> Pascal как начать. Бесплатные курсы программирования Online</p>
@@ -175,7 +178,7 @@
 <article class="article">
   <div class="anchor" id="urok3"></div>
   <h2>Паскаль. Урок 3</h2>
-  
+
   <p><span class="text-link">Изучил урок</span> <a href="https://fkn.ktu10.com/?q=node/8504" class="text-link">https://fkn.ktu10.com/?q=node/8504</a> #3 Типы данных в языке Pascal. Объявление переменных. Целые числа integer. Оператор присваивания. Инициализация в Паскаль</p>
 
   <p><span class="text-link">Прочитал</span> <a href="https://fkn.ktu10.com/?q=node/8624" class="text-link">https://fkn.ktu10.com/?q=node/8624</a> Виды представления данных в Паскаль -- какие конструкции обладают типом данных</p>
@@ -203,7 +206,7 @@
 <article class="article">
   <div class="anchor" id="urok4"></div>
   <h2>Паскаль. Урок 4</h2>
-  
+
   <p><span class="text-link">Изучил урок</span> <a href="https://fkn.ktu10.com/?q=node/8533" class="text-link">https://fkn.ktu10.com/?q=node/8533</a> #4 Real Вещественный тип данных в Паскаль. Неявное приведение типа. Примеры</p>
 
   <p><span class="text-link">Прочитал</span> <a href="https://fkn.ktu10.com/?q=node/8515" class="text-link">https://fkn.ktu10.com/?q=node/8515</a> Виды представления данных в Паскаль -- какие конструкции обладают типом данных</p>
@@ -224,7 +227,7 @@
 <article class="article">
   <div class="anchor" id="urok5"></div>
   <h2>Паскаль. Урок 5</h2>
-  
+
   <p><span class="text-link">Изучил урок</span> <a href="https://fkn.ktu10.com/?q=node/8534" class="text-link">https://fkn.ktu10.com/?q=node/8534</a> #5 Ввод данных с клавитуры (из консоли) в Паскаль. Процедура Readln()</p>
 
   <p><span class="yt-link">Посмотрел видео youtube</span> <a href="https://youtu.be/zxiw4RKpCxQ" class="yt-link">#5 Паскаль: Readln() Ввод данных из консоли в переменные</a> (2020.02.09 13мин)</p>
@@ -249,6 +252,6 @@
 <article class="article">
   <div class="anchor" id="urok6"></div>
   <h2>Паскаль. Урок 6</h2>
-  
+
   <p><span class="text-link">Изучил урок</span> <a href="https://fkn.ktu10.com/?q=node/8522" class="text-link">https://fkn.ktu10.com/?q=node/8522</a> #6 Boolean Логический тип данных. Логические выражения. Операции AND и OR. Таблицы истинности. Приоритет операция. Паскаль</p>
 </article>
